Switch fstyp build to toggle ZFS support on WITHOUT_ZFS rather than WITHOUT_CDDL

PR:		200976
Approved by:	imp
MFC after:	1 week
Sponsored by:	ScaleEngine Inc.
Differential Revision:	https://reviews.freebsd.org/D2045

Former-commit-id: 5e439bc26de1a8cae451d6c3017bfa61856959bd